service.yml
apiVersion: v1
kind: Service
metadata:
  name: your-node-app-service
spec:
  selector:
    app: your-node-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
